# centrifuge

./: .example.env  .gitignore  Dockerfile  Makefile  README.md  WARP.md  docker-compose.yaml  main.py  pyproject.toml  test_ingest.py  test_validation.py
.github/: pull_request_template.md
.github/workflows/: main.yaml
.specs/: v1_centrifuge-audit-report.md  v1_centrifuge.md
api/: main.py  models.py
app/: main.py
artifacts/e09ffb6b-745a-4f43-a2b1-4c31c4ec6cd3/: audit.ndjson  cleaned.csv  diff.csv  manifest.json  metrics.json  summary.md
core/: api_models.py  apply.py  artifacts.py  config.py  database.py  db_models.py  ingest.py  llm_adapter.py  llm_client.py  llm_processor.py  models.py  pipeline.py  planner.py  quarantine.py  rules.py  schema_inference.py  storage.py  validation.py
docs/: ADR-001-rules-first-llm.md  ARCHITECTURE.md  LLM_INTEGRATION.md  LLM_INTEGRATION_STATUS.md  LLM_OPERATION_FLOW.md  MIGRATION_V1_TO_V2.md  NOTES.md  RUNBOOK.md  SOLUTION.md  prompts.md
ops/sql/init/: 01_schema.sql
prompts/: account_name.yaml  department.yaml
sample-data/: sample_data-1.csv
scripts/: verify_v2.sh
tests/: test_adversarial.py  test_determinism.py  test_golden.py  test_integration.py  test_worker_concurrency.py
worker/: main.py
