[project]
name = "centrifuge"
version = "0.1.0"
description = "Trustworthy CSV cleaning with deterministic rules and contracted LLM assists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "psycopg[binary,pool]>=3.2.0",
    "boto3>=1.35.0",
    "litellm>=1.52.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "chardet>=5.2.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]
